--- a/fn-quarto.css
+++ b/fn-quarto.css
@@ -14,6 +14,19 @@
 
 /**************
  *
+ * Centering (must set width to less than 100%)
+ *
+ **************/
+
+.center {
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+
+
+/**************
+ *
  * Highlight
  *
  **************/
@@ -55,22 +68,4 @@
     box-shadow: 3px 3px 3px #111;
 }
 
-
-/*******************
- *
- * Text alignment / justification
- *
- *******************/
-
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
-.text-center {
-    text-align: center;
-}
 
